opam-version: "1.2"
name: "ppx_compose"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/ppx_compose/"
bug-reports: "https://github.com/paurkedal/ppx_compose/issues"
dev-repo: "https://github.com/paurkedal/ppx_compose.git"
license: "LGPL-3 with OCaml linking exception"

build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune"
  "ocaml-migrate-parsetree"
]
available: [ocaml-version >= "4.02.3"]
