opam-version: "2.0"
name: "ppx_compose"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ppx_compose/"
bug-reports: "https://github.com/paurkedal/ppx_compose/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune"
  "ocaml-migrate-parsetree"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ppx_compose.git"
